# dstu_4163_2020

./: .dockerignore  .gitignore  .gitmodules  LICENSE  PLAN_macos_app.md  README.md  docker-compose.yml  manage.sh  pyproject.toml
docs/: db_document_creation_guide.md  doc_templates_query_guide.md  glossary.md  requirements.md
packaging/: Info.plist.template  build-dmg.sh  build.sh  launcher.py  pyinstaller.spec
portal/: .dockerignore  Dockerfile  README.md  __init__.py  auth.py  db.py  docker-compose.yml  domain_bridge.py  helpers.py  main.py  registry.py  requirements.txt  scan_ingest.py
samples/: conformant.json  non_conformant.json
scripts/: _gen_2sign.py  _gen_3page.py  _gen_statut10.py  _gen_tov_at_e.py  check_kep_key.py  demo_attachments_flow.py  demo_doc_flow.py  demo_docflow_10.py  extract_certs.py  gen_facsimile_pdf.py  gen_seal_p12.py  gen_test_certs.py  generate_admin_facsimile.py  generate_all_users_facsimile.py  generate_approval_example.py  generate_legal_process.py  generate_letters_tov_at.py  generate_restricted_order.py  generate_samples.py  make_attachments_valid.py  prepare_docker_seed.py  seed_company.py  seed_demo_10_levels.py  seed_demo_25_levels.py  seed_demo_big_nested.py  seed_demo_deep_recursion.py  seed_demo_double_nested.py  seed_demo_nested_attachments.py  seed_test_attachments.py  seed_ukrndnc_nakaz.py  sign_pdf_with_uapki.py  token_sign_nmh.py
tests/: builders.py  test_access_restriction_rule.py  test_application_integration.py  test_asic.py  test_asic_cli.py  test_ca_registry.py  test_cert_parser_seal.py  test_cmp.py  (+17 more)
(+116 files in other folders)
