[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dilovod4"
version = "0.1.0"
description = "ДСТУ 4163:2020 document-formatting conformance engine (clean/hexagonal architecture)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
docx = ["python-docx>=1.1"]
dev = ["pytest>=8.0", "python-docx>=1.1"]

[project.scripts]
dilovod4 = "dilovod4.presentation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
